--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ build/Release
 # nodejs Dependency directories
 node_modules/
 jspm_packages/
+package-lock.*
 
 # Typescript v1 declaration files
 typings/
